crates/elm-client-gen-derive-tests/tests/compile_fail/unit_struct.rs
use elm_client_gen_core::ElmType;

#[derive(ElmType)]
#[elm(module = "Api.Empty")]
pub struct Empty;

fn main() {}
