crates/elm-client-gen-derive-tests/tests/compile_fail/unit_struct.stderr
error: ElmType cannot be derived for unit structs
 --> tests/compile_fail/unit_struct.rs:5:12
  |
5 | pub struct Empty;
  |            ^^^^^
